ingress/deploy-podv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deploy-podv2
  namespace: default
  labels:
    app: v2
spec:
  selector:
    matchLabels:
      app: v2
  replicas: 3
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
      - name: mycontainer
        image: "raguyazhin/simple-node-app:2.0.0"
        ports:
        - containerPort:  3000
          name:  http
