ingress/podv1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "podv1"
  namespace: default
  labels:
    app: "v1"
spec:
  containers:
  - name: mycontainer
    image: "raguyazhin/simple-node-app:1.0.0"
    ports:
    - containerPort:  3000
      name:  http
