ingress/podv2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "podv2"
  namespace: default
  labels:
    app: "v2"
spec:
  containers:
  - name: mycontainer
    image: "raguyazhin/simple-node-app:2.0.0"
    ports:
    - containerPort:  3000
      name:  http
