ingress/podv1svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podv1svc
spec:
  type: LoadBalancer
  selector:
    app: v1
  ports:
  - port: 3000
    targetPort: 3000
