ingress/podv2svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podv2svc
spec:
  type: LoadBalancer
  selector:
    app: v2
  ports:
  - port: 3000
    targetPort: 3000
