ingress/podv3svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podv3svc
spec:
  type: LoadBalancer
  selector:
    app: v3
  ports:
  - port: 3000
    targetPort: 3000
